(chore): remov debug code

--- a/src/index.html
+++ b/src/index.html
@@ -653,7 +653,7 @@
     document.getElementById("addBars").addEventListener("click", addBars);
     document.getElementById("addAvatars").addEventListener("click", addAvatars);
 
-    document.getElementById("addBars").click();
+    // document.getElementById("addBars").click();
     // document.getElementById("addAvatars").click();
 
     addTimers();
