(bar): small performance improvements

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     [attributes] code, [variables] code { display: block; margin: 1em 0; }
 
     #barWrapper { display: flex; }
-    #barWrapper > div { margin: 0 10px; }
+    #barWrapper > div { box-sizing: border-box; width: 25%; padding: 0 10px; }
 
     #avatarHolder { white-space: nowrap; }
     #avatarHolderSmaller { --avatar-size: 0.5; }
