--- a/src/index.html
+++ b/src/index.html
@@ -611,7 +611,7 @@
       </ht-flip>
       <ht-flip direction="x" onclick="toggleFlip(this)">
         <div slot="front">
-          <ht-avatar base="http://localhost/htweb" parts='[{"url":"backgrounds/bg_blue_int.png","x":9,"y":10},{"url":"//res.hattrick.org/kits/17/167/1664/1663296/body12.png","x":9,"y":10},{"url":"faces/f4h.png","x":9,"y":10},{"url":"eyes/e34c.png","x":25,"y":16},{"url":"mouths/m5c.png","x":29,"y":66},{"url":"noses/n3.png","x":20,"y":27},{"url":"hair/f4h6f.png","x":9,"y":10}]'></ht-avatar>
+          <ht-avatar onload="avatarLoaded.call(this, event.detail)" base="http://localhost/htweb" parts='[{"url":"backgrounds/bg_blue_int.png","x":9,"y":10},{"url":"//res.hattrick.org/kits/17/167/1664/1663296/body12.png","x":9,"y":10},{"url":"faces/f4h.png","x":9,"y":10},{"url":"eyes/e34c.png","x":25,"y":16},{"url":"mouths/m5c.png","x":29,"y":66},{"url":"noses/n3.png","x":20,"y":27},{"url":"hair/f4h6f.png","x":9,"y":10}]'></ht-avatar>
         </div>
         <div slot="back">
           <ht-rating size="large" rating="14.5" stamina="1"></ht-rating>
@@ -769,6 +769,12 @@
         avatarHolderSmaller.style.setProperty("--avatar-size", parseInt(e.target.value) / 100 / 2);
       });
     };
+    
+    function avatarLoaded(images) {
+      console.log(this, images);
+      this.parts = this.printToCanvas(images).toDataURL();
+      this.onload = null;
+    }
 
     function toggleFlip(el) {
       el.flipped = !el.flipped;
