(chore): update to stecnil 0.11.0

--- a/src/index.html
+++ b/src/index.html
@@ -771,7 +771,7 @@
     };
     
     function avatarLoaded(images) {
-      console.log(this, images);
+      // console.log(this, images);
       this.parts = this.printToCanvas(images).toDataURL();
       this.onload = null;
     }
