(tooltip): fix typo in tooltip variables

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       --tooltip-background: black;
       --tooltip-color: orange;
       --tooltip-padding: 25px;
-      --tooltop-border-radius: 100%;
+      --tooltip-border-radius: 100%;
       --tooltip-box-shadow: 0 0 20px 10px orange;
       --tooltip-arrow-size: 25px;
     }
@@ -61,11 +61,11 @@
       --tooltip-background: white;
       --tooltip-color: #575757;
       --tooltip-border: 1px solid #767676;
-      --tooltop-border-radius: 0px;
+      --tooltip-border-radius: 0px;
       --tooltip-padding: 0.2em 0.35em;
       --tooltip-box-shadow: 4px 4px 2px -3px #767676;
       --tooltip-pointer-events: none;
-      --tooltop-arrow-size: 0;
+      --tooltip-arrow-size: 0;
     }
 
     ht-tooltip.delay { --tooltip-delay: .5s; }
@@ -117,8 +117,8 @@
       <code>--tooltip-padding: 5px 10px</code>
       <code>--tooltip-box-shadow: none</code>
       <code>--tooltip-max-width: 400px</code>
-      <code>--tooltop-arrow-size: 7px</code>
-      <code>--tooltop-border-radius: 3px</code>
+      <code>--tooltip-arrow-size: 7px</code>
+      <code>--tooltip-border-radius: 3px</code>
       <code>--tooltip-pointer-events: none</code>
       <code>--tooltip-delay: 0s</code>
     </div>
