--- a/src/index.html
+++ b/src/index.html
@@ -649,6 +649,19 @@
           <hattrick-rating size="large" rating="14.5" stamina="1"></hattrick-rating>
         </div>
       </hattrick-flip>
+      <br />
+      <hattrick-flip direction="y" onclick="toggleFlip(this)">
+        <div slot="front">Front</div>
+        <div slot="back">Back</div>
+      </hattrick-flip>
+      <hattrick-flip direction="y" onclick="toggleFlip(this)">
+        <div slot="front">
+          <hattrick-avatar onload="avatarLoaded.call(this, event.detail)" base="https://www.hattrick.org" parts='[{"url":"backgrounds/bg_blue_int.png","x":9,"y":10},{"url":"//res.hattrick.org/kits/17/167/1664/1663296/body12.png","x":9,"y":10},{"url":"faces/f4h.png","x":9,"y":10},{"url":"eyes/e34c.png","x":25,"y":16},{"url":"mouths/m5c.png","x":29,"y":66},{"url":"noses/n3.png","x":20,"y":27},{"url":"hair/f4h6f.png","x":9,"y":10}]'></hattrick-avatar>
+        </div>
+        <div slot="back">
+          <hattrick-rating size="large" rating="14.5" stamina="1"></hattrick-rating>
+        </div>
+      </hattrick-flip>
     </div>
   </section>
   
