(tooltip): added an always-show option

--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,8 @@
     <div examples>
       <h4>Basic</h4>
 
+      <hattrick-tooltip arrow="start" position="bottom" always-show content="This tooltip is always shown."></hattrick-tooltip>
+
       <div style="text-align: center">
         <hattrick-tooltip content="By default the title will align to the cursor">
           <b style="cursor: initial">Mouseover me</b>
