avatar: box-shadow for background without facecard

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
     #avatarHolder { white-space: nowrap; }
     #avatarHolderSmaller { --avatar-size: 0.5; }
 
+    [avatars] hattrick-avatar { margin: 0 5px; }
+
     /* hattrick-tooltip { font-size: 24px; } */
 
     hattrick-bar { margin-bottom: 2px; max-width: 250px; }
@@ -666,7 +668,7 @@
   </section>
   
   <h2>Bars</h2>
-  <section>
+  <section bars>
     <hattrick-bar level="8"></hattrick-bar>
 
     <p><a role="button" id="addBars" href="javascript:void(0)">Load bars</a></p>
@@ -676,7 +678,7 @@
   </section>
 
   <h2>Avatars:</h2>
-  <section style="min-height: 300px">
+  <section avatars style="min-height: 300px">
 
     <p><a role="button" id="addAvatars" href="javascript:void(0)">Load avatars</a></p>
     
