(range): new range component

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,8 @@
 
   <h1>Hattrick Components</h1>
 
+  <hattrick-range dual-knobs="true" ticks="true" min="0" max="20" snaps="true"></hattrick-range>
+
   <p>
     This page shows of the stencil components and various ways to use them.
   </p>
